Pin create added. Image upload/delete added. Location endpoints added. Swag updated.
