# controllers/image.go
@@ -3,15 +3,18 @@ package controllers
 import (
 	"fmt"
 	"os"
+	"strconv"
 	"strings"
 	"travel_backend/models"
 	"travel_backend/requests"
 
 	"github.com/aws/aws-sdk-go/aws"
 	"github.com/aws/aws-sdk-go/aws/session"
+	"github.com/aws/aws-sdk-go/service/s3"
 	"github.com/aws/aws-sdk-go/service/s3/s3manager"
 	"github.com/gofiber/fiber/v2"
 	"github.com/golang-jwt/jwt/v4"
+	"github.com/google/uuid"
 	"gorm.io/gorm"
 )
 
@@ -77,24 +80,19 @@ func (i *ImageController) UploadImage(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
 
+	awsKey := strconv.Itoa(int(id)) + "/" + uuid.NewString() + data.Image.Filename
+
 	upload, err := uploader.Upload(&s3manager.UploadInput{
 		Bucket: aws.String(bucket),
 		ACL:    aws.String("public-read"),
-		Key:    aws.String(data.Image.Filename),
+		Key:    aws.String(awsKey),
 		Body:   file,
 	})
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "Failed to upload image. " + err.Error()})
 	}
 
-	/*TODO: After Image Uploaded -->
-	Send image URL to object
-	Set images to folder by UID
-	Delete image option
-	On user delete, delete user folder
-	*/
-
-	if err := imageModel.CreateImage(data, int(id)); err != nil {
+	if err := imageModel.CreateImage(data, awsKey, upload.Location, int(id)); err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
 
@@ -107,7 +105,7 @@ func (i *ImageController) UploadImage(c *fiber.Ctx) error {
 // @Tags image
 // @Accept application/json
 // @Produce application/json
-// @Param pagination body requests.Pagination true "Pagination"
+// @Param pagination query requests.Pagination true "Pagination"
 // @Success 200 {string} string
 // @Failure 400 {string} string
 // @Failure 500 {string} string
@@ -143,7 +141,7 @@ func (i *ImageController) GetImagesByUserID(c *fiber.Ctx) error {
 // @Tags image
 // @Accept application/json
 // @Produce application/json
-// @Param imagebycountry body requests.ImageByCountry true "Image by country"
+// @Param imagebycountry query requests.ImageByCountry true "Image by country"
 // @Success 200 {string} string
 // @Failure 400 {string} string
 // @Failure 500 {string} string
@@ -179,7 +177,7 @@ func (i *ImageController) GetImagesByCountry(c *fiber.Ctx) error {
 // @Tags image
 // @Accept application/json
 // @Produce application/json
-// @Param imagebylocation body requests.ImageByLocation true "Image by location id"
+// @Param imagebylocation query requests.ImageByLocation true "Image by location id"
 // @Success 200 {string} string
 // @Failure 400 {string} string
 // @Failure 500 {string} string
@@ -207,4 +205,55 @@ func (i *ImageController) GetImagesByLocation(c *fiber.Ctx) error {
 	}
 
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"message": "Images fetched successfully. 👋", "data": images})
+}
+
+// Delete Image by ID
+// @Summary Delete Image by ID
+// @Description Returns image by user id and image id
+// @Tags image
+// @Accept application/json
+// @Produce application/json
+// @Param imagebylocation body requests.ImageByLocation true "Image by location id"
+// @Success 200 {string} string
+// @Failure 400 {string} string
+// @Failure 404 {string} string
+// @Failure 500 {string} string
+// @Router /image [delete]
+func (i *ImageController) DeleteImageByID(c *fiber.Ctx) error {
+	var data requests.ID
+	if err := c.BodyParser(&data); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	errors := validateStruct(data)
+	if errors != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(errors)
+	}
+
+	imageModel := models.NewImageModel(i.Database)
+
+	user := c.Locals("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	id := claims["id"].(float64)
+
+	image, err := imageModel.GetImageByID(int(id), data.ID)
+	if err != nil {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	if err := imageModel.DeleteImageByID(int(id), data.ID); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(errors)
+	}
+
+	bucket := os.Getenv("AWS_BUCKET_NAME")
+	awsManager := s3.New(i.AWSSession)
+
+	if _, err = awsManager.DeleteObject(&s3.DeleteObjectInput{
+		Bucket: aws.String(bucket),
+		Key:    aws.String(image.AWSImageKey),
+	}); err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(errors)
+	}
+
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{"data": "Image deleted successfully."})
 }
